Fixed SecurityDomain annotation